Update GroupCountingByKitchenArea.java